wrapping corrected

--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ margin-left: 20px;
 }
 
 .newpara{
-font-size:90px;
+font-size:300%;
 
 }
 
@@ -110,7 +110,7 @@ animation:pop 0.6s;
 .img{
 
     border-radius: 30px;
-    height:80%;
+    height:550px;
     width:80%;
     padding:0;
     margin:0;
@@ -125,6 +125,7 @@ animation:pop 0.6s;
     width:90%;
     margin-left: 90px;
     border-radius: 30px;
+    
     
 }
 .karthik{
